--- a/public/project/bakeoff/index.html
+++ b/public/project/bakeoff/index.html
@@ -230,7 +230,7 @@ the <code>config.toml</code> file.</p>
   
   
     <a class="prev dtc pr2 tl v-top fw6"
-    href="//localhost:7142/project/penguins/">&larr; Palmer Penguins</a>
+    href="//localhost:7142/project/earthquakes-analytics/">&larr; Earthquake Analysis</a>
   
   
   
