--- a/public/project/giraffes/index.html
+++ b/public/project/giraffes/index.html
@@ -284,7 +284,7 @@ same color options, but this time you get to assign your own HEX codes.</p>
   
   
     <a class="next dtc pl2 tr v-top fw6"
-    href="//localhost:7142/project/penguins/">Palmer Penguins &rarr;</a>
+    href="//localhost:7142/project/bakeoff/">Bakeoff &rarr;</a>
   
 </div>
 
