Updated Project Design

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
   <section class="page-content mw9 center">
     <div class="flex-l items-center" style="flex-direction: row-reverse;">
       <div class="mh4 w-50-l tr">
-        <h1 class="f2 f1-m f-subheadline-l fw5-ns mv4 lh-solid" style="font-size:55px;">Prachi Patel</h1>
+        <h1 class="f2 f1-m f-subheadline-l fw5-ns mv4 lh-solid" style="font-size:50px;">Prachi Patel</h1>
         <h2 class="f5 fw7 mt0 mb4 ttu tracked" style="font-size:20px;">Data Analyst</h2>
         <div class="social-icon-links" aria-hidden="true">
   
@@ -129,7 +129,7 @@
   
 </div>
 
-        <p class="f4 mt4 lh-copy" style="text-align: justify">Hello and welcome! <br/> Inside you’ll find many of my projects that I have done in Data Analytics.<br/> <br/> Data Analyst with four years of experience enhancing operations for organizations through information systems solutions. Proven track record of transforming specific business goals for growth and efficiency improvements into new system designs. Results-oriented analyst skilled in managing and breaking down large volumes of information. Proactive at heading off operations, workflow, and production issues by uncovering trends affecting business success. Working with Healthcare IT companies and Recruitment IT firm. Experience in BI development, ETL (SSIS), Data warehouse, Report development (SSRS/Excel/ Power BI/Tableau) support and SQL Server development.</p>
+        <p class="f4 mt4 lh-copy" style="text-align: justify; font-size:18px;">Hello and welcome! <br/> Inside you’ll find many of my projects that I have done in Data Analytics.<br/> <br/> Data Analyst with four years of experience enhancing operations for organizations through information systems solutions. Proven track record of transforming specific business goals for growth and efficiency improvements into new system designs. Results-oriented analyst skilled in managing and breaking down large volumes of information. Proactive at heading off operations, workflow, and production issues by uncovering trends affecting business success. Working with Healthcare IT companies and Recruitment IT firm. Experience in BI development, ETL (SSIS), Data warehouse, Report development (SSRS/Excel/ Power BI/Tableau) support and SQL Server development.</p>
         <a class="mt4 action text" href="/about">Read More &rarr;</a>
       </div>
       <div class="tr w-50-l ml4">
