--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -144,7 +144,7 @@
     <label for="email-address">Email address</label>
     <input type="email" name="_replyto" id="email-address" placeholder="your@email.here" required>
     <label for="message">Message</label>
-    <textarea rows="6" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus." required></textarea>
+    <textarea rows="6" name="message" id="message" placeholder="Type your message here" required></textarea>
     <input type="hidden" name="_subject" id="email-subject" value="Contact Me Form Submission" />
   </fieldset>
   <input type="submit" value="Send">
@@ -163,7 +163,7 @@
       Made with <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/hugo-apero/" rel="dct:source">Hugo Apéro</a></span>.
       <br />
       
-Based on <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/formspree/blogophonic-hugo" rel="dct:source">Blogophonic</a></span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://formspree.io" property="cc:attributionName" rel="cc:attributionURL">Formspree</a>.
+
     </p>
     
     <div class="site-social-links db dtc-l v-mid w-100 w-33-l tc pv2 pv0-l mv0">
