Updated About Me Page

--- a/public/about/header/index.html
+++ b/public/about/header/index.html
@@ -44,8 +44,8 @@
     
   
   <meta itemprop="name" content="Prachi Patel">
-  <meta itemprop="description" content="Experienced Data Analyst in healthcare and recruitment IT. Proficient in BI development, ETL, data warehousing, and report development using SQL Server, SSIS, SSRS, Excel, Power BI, and Tableau. ">
-  <meta itemprop="wordCount" content="28">
+  <meta itemprop="description" content="Experienced IT Professional in healthcare and recruitment IT. Proficient in development, ETL, data warehousing, and report development using SQL Server, SSIS, SSRS, Excel, Power BI, and Tableau. ">
+  <meta itemprop="wordCount" content="27">
   
   
 
@@ -101,7 +101,7 @@
       </header>
       <section class="post-body pt5 pb4">
         <!-- this is a subheadline -->
-<p style="font-size: 18px"> Experienced Data Analyst in healthcare and recruitment IT. Proficient in BI development, ETL, data warehousing, and report development using SQL Server, SSIS, SSRS, Excel, Power BI, and Tableau. </p>
+<p style="font-size: 18px"> Experienced IT Professional in healthcare and recruitment IT. Proficient in development, ETL, data warehousing, and report development using SQL Server, SSIS, SSRS, Excel, Power BI, and Tableau. </p>
         
         <details closed class="f6 fw7 input-reset">
   <dl class="f6 lh-copy">
@@ -110,7 +110,7 @@
   </dl>
   <dl class="f6 lh-copy">
     <dt class="fw7">Length:</dt>
-    <dd class="fw5 ml0">1 minute read, 28 words</dd>
+    <dd class="fw5 ml0">1 minute read, 27 words</dd>
   </dl>
   
   
