--- a/public/about/main/index.html
+++ b/public/about/main/index.html
@@ -100,8 +100,7 @@
 
       </header>
       <section class="post-body pt5 pb4">
-        <p>** index doesn&rsquo;t contain a body, just front matter above.
-See about/list.html in the layouts folder **</p>
+        <p>** index doesn&rsquo;t contain a body, just front matter above. See about/list.html in the layouts folder **</p>
 
         
         <details closed class="f6 fw7 input-reset">
