Updated Why me Section

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -126,9 +126,11 @@
           
           
             <div class="pv3 f4 measure lh-copy dib"><p style="font-size:18px; padding-top:0%; margin-top:0%; text-align:justify;">
-Microsoft-certified BI Developer with 5 years of experience in BI solution development using Microsoft Power BI, Tableau, and other analytical tools. Adept at managing shifting priorities, meeting tight deadlines, developing complex queries and reports, and automating tasks to enhance data accuracy. Proven skills in SQL, database management, and data modelling. I seek to leverage analytical and problem-solving expertise to ensure data quality and successful project delivery for internal and external clients.
+Microsoft-certified BI Analyst with 5 years of experience in business intelligence, data visualization, and analytics using Power BI, Tableau, and SQL. Skilled in data modeling, dashboard development, and automation to enhance data accuracy and drive insights. Adept at managing shifting priorities, meeting tight deadlines, and developing complex reports that support data-driven decision-making.
 <br/> <br/>
-Familiar with developing data mining applications to pull information quickly and efficiently for needed reports based on clients' requirements with vast amounts of data. I have broad knowledge of multiple applications and languages and top-notch technical abilities. My excellent verbal and written communication skills allow me to write reports and present information clearly and concisely effectively. My experience working with data and creating applications to manage that data makes me an excellent choice for this role. I am detail-oriented. My strong time management skills also help me complete tasks on schedule and self-manage my work.
+Proficient in data mining and ETL processes, extracting actionable insights from vast datasets based on business needs. My strong analytical mindset and problem-solving abilities enable me to optimize data workflows and improve reporting efficiency. With broad knowledge of multiple applications and programming languages, I excel at designing scalable BI solutions.
+<br/><br/>
+I also bring excellent verbal and written communication skills, allowing me to translate complex data into clear, actionable insights for stakeholders. My attention to detail and time management skills ensure efficient project execution, making me a strong asset in delivering impactful business intelligence solutions.
 </p>
 <hr>
 <h3> Work Experience </h3>
